--- a/package.json
+++ b/package.json
@@ -1,4 +1,14 @@
 {
+  "name": "express-pg",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Killerpac/express-pg.git"
+  },
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "express": "^4.18.2",
     "pg": "^8.10.0"
